[ng-anhhtuann] fix: resolve null pointer and logic bugs in user and course services